# RAG-Document-Q-A-App

./: .dockerignore  .env  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  Project_Info.docx  README.md  app.py  docker-compose.yml  graph_agent.py  ingest.py  list_models.py  main.py  pyproject.toml  requirements.txt  test_app.py  test_embedding.py  verify_embedding_model.py
app/: main.py
app/api/: router.py
app/core/: config.py
app/db/: redis_cache.py  vector_store.py
app/evaluation/: ragas_eval.py
app/ingestion/: chunker.py  loaders.py
app/models/: schemas.py
app/retrieval/: hybrid_search.py  query_rewriter.py  reranker.py
app/services/: chat_service.py  document_service.py  evaluation_service.py
backend/: rag_engine.py
chroma_db/: chroma.sqlite3
docker/: Dockerfile.api  Dockerfile.frontend
docs/: engineering_improvement_plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Chat.jsx  DocumentList.jsx  DocumentUpload.jsx
frontend_flask/: app.py
frontend_flask/templates/: index.html
modules/: __init__.py  agent.py  embedder.py  generator.py  pdf_reader.py  retriever.py
modules/agent/: agent.py
modules/ingestion/: __init__.py  chunker.py  pdf_reader.py
modules/retrieval/: __init__.py  embedder.py  retriever.py  vector_store.py
src/: api.py  embed_index.py  generator.py  ingest.py  retriever.py  streamlit_app.py
static/: style.css
templates/: index.html
uploads/: knowledge.txt  sample_knowledge.txt
