[project]
name = "rag"
version = "0.1.0"
description = "Agentic RAG Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "faiss-cpu>=1.7.4",
    "pypdf>=3.17.0",
    "numpy>=1.26.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-text-splitters>=0.2.0",
    "chromadb>=0.5.0",
    "flask-session>=0.8.0",
    "langchain-core>=1.2.14",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "redis>=7.3.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "ragas>=0.4.3",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.22",
    "pydantic-settings>=2.13.1",
    "langchain-huggingface>=1.2.1",
    "requests>=2.32.5",
]
