[project]
name = "agentic-graph-rag"
version = "0.1.0"
description = "Agentic Graph RAG System powered by LangGraph, Gemini, and Neo4j"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gunicorn>=22.0.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-experimental>=0.0.60",
    "langgraph>=0.1.0",
    "neo4j>=5.14.0",
    "pydantic>=2.0.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0",
]
